--- a/content/chatbot/index.html
+++ b/content/chatbot/index.html
@@ -1,5 +1,5 @@
 ---
-title: "About"
+title: "chatbot"
 description: A blog template for Hugo developed by Formspree and available for free.
 date: 2021-01-01
 draft: false
@@ -9,7 +9,7 @@ show_title_as_headline: false
 
 
 <h1 class="f2 f1-ns measure-narrow lh-solid">
-  about & acknowledgements
+  chatbot
 </h1>
 <p class="f4 measure lh-copy">
   We built Blogophonic to take advantage of several <i>Hugo</i> features like pagination, taxonomies and archetypes.
