edited about page

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -9,17 +9,23 @@ show_title_as_headline: false
 
 
 <h1 class="f2 f1-ns measure-narrow lh-solid">
-  about & acknowledgements
+  about this project
 </h1>
 <p class="f4 measure lh-copy">
-  We built Blogophonic to take advantage of several <i>Hugo</i> features like pagination, taxonomies and archetypes.
-  Dive deeper on the <a href="https://github.com/formspree/blogophonic-hugo">Github&nbsp;page</a>.
-</p>
+This project is feminist because it is 
 
-<p class="f4 measure lh-copy">
-  If you would like to use this template with another static site
-  generator, <a href="https://help.formspree.io/hc/en-us/requests/new" target="_blank">drop us a
-    line</a> and let us know your preference.
-</p>
+
 
 <hr class="f4 ba b--black-10 mt5 mb4 ml0">
+
+<h3 class="f2 f1-ns measure-narrow lh-solid">
+ acknowledgements
+</h3>
+(alphabetical orders)
+This project has been developed with the guidance and support of <a href="https://finokoye.com/" target="_blank"">Florence</a>, <a href="https://joanachicau.com/" target="_blank"">Jo</a>, <a href="https://olu.online/" target="_blank"">Olu</a>, and <a href="https://yasmine-boudiaf.com/" target="_blank"">Yasmine</a>. Thank your for sharing your practice and expertise with me, and thank you for your encouragement and patience. Another thank you to Kes, Mathilda, Peaks and Yifan for your kindness and community throughout the term. "We aren't meant to know everything, that is why we have each other."   
+<br><br>
+The base for this website the Blogophonic by Formspree is licensed under a Creative Commons Attribution 4.0 International License. Based on a work at <a href="https://github.com/formspree/blogophonic-hugo" target="_blank"">https://github.com/formspree/blogophonic-hugo</a>. This site is a static site, uses darker colors, and has minimal photos to reduce the energy usage and carbon emission per site visit. This site may inaccessible to some due to the challenging contrasts used, because of this, there is a file with the questions and answers included above the chatbot. The colours and fonts were chosen with my accessibility prioritized. 
+<br><br>
+(adapted from <a href="https://abolitionistlibraryassociation.org/about/" target="_blank"">the Abolitionist Library Association</a>) About this site: This site is hosted on GitHub, using GitHub Pages. The parent company of GitHub is Microsoft, which holds a contract with Immigration and Customs Enforcement (ICE) in the United States of America. The ICE enacts harmful and deeply racist acts of violence, including deportation and incarceration. My values are antithetical to this partnership and other perpetuations of violence and erasure committed against BIPOC communities. 
+<br><br>
+This project is about conversations. "We need to have a conversation about ableism. Every single community, everywhere" -<a href="https://crutchesandspice.com/" target="_blank"">Imani Barbarin</a>. Black disabled lives matter. 
