chanig file paths

--- a/content/chatbot/index.html
+++ b/content/chatbot/index.html
@@ -1,7 +1,6 @@
 ---
 title: "chatbot"
-description: A blog template for Hugo developed by Formspree and available for free.
-date: 2021-01-01
+description: I don't need to explain this to you, but I want to.
 draft: false
 layout: standard
 show_title_as_headline: false
