--- a/content/chatbot/index.html
+++ b/content/chatbot/index.html
@@ -3,13 +3,9 @@ title: "chatbot"
 description: I don't need to explain this to you, but I want to.
 draft: false
 layout: standard
-show_title_as_headline: false
+show_title_as_headline: true
 ---
 
-
-<h1 class="f2 f1-ns measure-narrow lh-solid">
-  chatbot
-</h1>
 
 <hr class="f4 ba b--black-10 mt5 mb4 ml0">
 <p class="f4 measure lh-copy">
