--- a/content/about/index.html
+++ b/content/about/index.html
@@ -1,16 +1,11 @@
 ---
-title: "About"
-description: A blog template for Hugo developed by Formspree and available for free.
-date: 2021-01-01
+title: "about this project"
 draft: false
 layout: standard
-show_title_as_headline: false
+show_title_as_headline: true
 ---
 
 
-<h1 class="f2 f1-ns measure-narrow lh-solid">
-  about this project
-</h1>
 <p class="f4 measure lh-copy">
 This project is feminist because it is 
 
@@ -24,7 +19,7 @@ This project is feminist because it is
 (alphabetical orders)
 This project has been developed with the guidance and support of <a href="https://finokoye.com/" target="_blank"">Florence</a>, <a href="https://joanachicau.com/" target="_blank"">Jo</a>, <a href="https://olu.online/" target="_blank"">Olu</a>, and <a href="https://yasmine-boudiaf.com/" target="_blank"">Yasmine</a>. Thank your for sharing your practice and expertise with me, and thank you for your encouragement and patience. Another thank you to Kes, Mathilda, Peaks and Yifan for your kindness and community throughout the term. "We aren't meant to know everything, that is why we have each other."   
 <br><br>
-The base for this website the Blogophonic by Formspree is licensed under a Creative Commons Attribution 4.0 International License. Based on a work at <a href="https://github.com/formspree/blogophonic-hugo" target="_blank"">https://github.com/formspree/blogophonic-hugo</a>. This site is a static site, uses darker colors, and has minimal photos to reduce the energy usage and carbon emission per site visit. This site may inaccessible to some due to the challenging contrasts used, because of this, there is a file with the questions and answers included above the chatbot. The colours and fonts were chosen with my accessibility prioritized. 
+The base for this website the Blogophonic by Formspree is licensed under a Creative Commons Attribution 4.0 International License. Based on a work at <a href="https://github.com/formspree/blogophonic-hugo" target="_blank"">https://github.com/formspree/blogophonic-hugo</a>. This site is a static site, uses darker colors, and has minimal photos to reduce the energy usage and carbon emission per site visit. This site may inaccessible to some due to the challenging contrasts used, because of this, there is a file with the questions and answers included above the chatbot. The colours and fonts were chosen with <b>my accessibility</b> prioritized. 
 <br><br>
 (adapted from <a href="https://abolitionistlibraryassociation.org/about/" target="_blank"">the Abolitionist Library Association</a>) About this site: This site is hosted on GitHub, using GitHub Pages. The parent company of GitHub is Microsoft, which holds a contract with Immigration and Customs Enforcement (ICE) in the United States of America. The ICE enacts harmful and deeply racist acts of violence, including deportation and incarceration. My values are antithetical to this partnership and other perpetuations of violence and erasure committed against BIPOC communities. 
 <br><br>
