linked text file for accessibility

--- a/content/chatbot/index.html
+++ b/content/chatbot/index.html
@@ -9,7 +9,7 @@ show_title_as_headline: true
 
 <hr class="f4 ba b--black-10 mt5 mb4 ml0">
 <p class="f4 measure lh-copy">
-  Scroll down to start the conversation. The chatbot is not accessible for screenreaders and could be challenging for some users. <a href="/chatbot/assets/migraine.rtf" target="_blank">Click here for a plain text file of the conversation.</a>
+  Scroll down to start the conversation. The chatbot is not accessible for screenreaders and could be challenging for some users. <a href="https://raw.githubusercontent.com/lexahl/migraine/main/static/migraine.txt" target="_blank">Click here for a plain text file of the conversation.</a>
 </p>
 
 
