--- a/content/resources/index.html
+++ b/content/resources/index.html
@@ -8,7 +8,7 @@ show_title_as_headline: true
 
 
 <p class="f4 measure lh-copy">
-  There are many great migraine resources and lists that organisations and communities have created for migraine, but these are what has worked for me. 
+  There are many great migraine resources and lists that organisations and communities have created for migraines, but these are what has worked for me. 
 </p>
 
 
@@ -19,7 +19,7 @@ show_title_as_headline: true
     <p class="measure lh-copy cf">
       <img src="https://github.com/lexahl/migraine/blob/main/content/resources/assets/migraine-reddit.png?raw=true" align="left" class="mw-100 w4 mr3 db br3 br--left"
         alt="screenshot of r/migraine community on reddit">
-		What helped me the most was joining a community to talk about migraine. From small things like memes and how a can of coke can speed up the effects of triptans, to more significant conversations like how to come to terms with the idea that migraine might never get better, knowing there are others out there that have similar experiences has helped me a lot. 
+		What helped me the most was joining a community to talk about my migraines. From small things like memes and how a can of coke can speed up the effects of triptans, to more significant conversations like how to come to terms with the idea that my migraines might never get better, knowing there are others out there that have similar experiences has helped me a lot. 
       <a href="https://www.reddit.com/r/migraine" target="_blank">View r/migraine community on reddit.</a>
     </p>
     
@@ -27,7 +27,7 @@ show_title_as_headline: true
     <p class="measure lh-copy cf">
       <img src="https://github.com/lexahl/migraine/blob/main/content/resources/assets/migraine-track.png?raw=true" align="left" class="mw-100 w4 mr3 db br3 br--left"
         alt="sreenshot of excel spreadsheet">
-      Tracking migraine can help figure out triggers (what doesn't work) and find out what makes things better. Tracking triggers can be helpful to learning about your migraine and advocating with a doctor, but can be emotionally and physically draining, especially after an attack. Be kind to yourself.
+      Tracking migraines can help figure out triggers (what doesn't work) and find out what makes things better. Tracking triggers can be helpful to learning about your migraines and advocating with a doctor, but can be emotionally and physically draining, especially after an attack. Be kind to yourself.
       <a href="https://migrainebuddy.com/" target="_blank">Try the Migraine Buddy app</a> or create your own way to track. The <a href="https://docs.google.com/spreadsheets/d/1iCSTyieFr3r1jyfMglvGydMcHE2VBEmP1fYYo9pCagc/edit#gid=0" target="_blank">Migraine Log template</a>, created by the r/migraine community, is a good alternative. 
     </p>
     
