lil edits migraine

--- a/content/resources/index.html
+++ b/content/resources/index.html
@@ -8,7 +8,7 @@ show_title_as_headline: true
 
 
 <p class="f4 measure lh-copy">
-  There are many great migraine resources and lists that organisations and communities have created for migraines, but these are what has worked for me. 
+  There are many great migraine resources that organisations and communities have created for migraines, but these are what has worked for me. 
 </p>
 
 
@@ -23,7 +23,7 @@ show_title_as_headline: true
       <a href="https://www.reddit.com/r/migraine" target="_blank">View r/migraine community on reddit.</a>
     </p>
     
-    <h4 class="f4 mt4 lh-title">track migraine, triggers, and what helps</h4>
+    <h4 class="f4 mt4 lh-title">track migraines, triggers, and what helps</h4>
     <p class="measure lh-copy cf">
       <img src="https://github.com/lexahl/migraine/blob/main/content/resources/assets/migraine-track.png?raw=true" align="left" class="mw-100 w4 mr3 db br3 br--left"
         alt="sreenshot of excel spreadsheet">
@@ -39,7 +39,7 @@ show_title_as_headline: true
     Here is the <a href="https://docs.google.com/spreadsheets/d/1wKPUeYMUVhtBJjFpKkl4u_2BAVJc7ccZA0dzObPo7S0/edit#gid=3" target="_blank">Common Migraine Medicine and Treatment List</a> from the r/migraine community. 
     </p>
     
-    <h4 class="f4 mt4 lh-title">learn more about migraine</h4>
+    <h4 class="f4 mt4 lh-title">learn more about migraines</h4>
     <p class="measure lh-copy cf">
       <img src="https://github.com/lexahl/migraine/blob/main/content/resources/assets/migraine-learn.png?raw=true" align="left" class="mw-100 w4 mr3 db br3 br--left"
         alt="screenshot of webpage explain what migraines are">
