--- a/content/chatbot/index.html
+++ b/content/chatbot/index.html
@@ -36,6 +36,33 @@ show_title_as_headline: true
             margin: 0;
             width: calc(100% - 30px);
         }
+        div#overlay {
+	display: none;
+	z-index: 2;
+	background: #000;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+	text-align: center;
+}
+div#specialBox {
+	display: none;
+	position: relative;
+	z-index: 3;
+	margin: 150px auto 0px auto;
+	width: 500px; 
+	height: 300px;
+	background: #FFF;
+	color: #000;
+}
+div#wrapper {
+	position:absolute;
+	top: 0px;
+	left: 0px;
+	padding-left:24px;
+}
     </style>
 </head>
 
@@ -57,7 +84,16 @@ Migraines can take many forms and affect and impact people unevenly. If you are 
 
 <hr class="f4 ba b--black-10 mt5 mb4 ml0">
 
+<button onmousedown="toggleOverlay()">Apply Overlay</button>
+<div id="overlay"></div>
+<div id="specialBox">
+  <iframe frameborder="0" height="100%" width="100%" 
+    src="https://www.youtube.com/embed/qVFIcF9lyk8">
+  </iframe>
+  <button onmousedown="toggleOverlay()">Close Overlay</button>
+</div>
 
+<hr class="f4 ba b--black-10 mt5 mb4 ml0">
 
     <!-- container element for chat window -->
     <div id="chat"></div>
@@ -88,6 +124,7 @@ var convo = {
     says: [
       "Thanks for starting the conversation.",
       "In this chatbot I want to share more information about my migraines, what I experience during a migraine, and what you can do.",
+      "...",
       "What do you want to start talking about?"
     ],
     reply: [
@@ -372,8 +409,7 @@ var convo = {
      "No.",
 	 "They started when I was 15.",
 	 "I used to get a lot of headaches alongside my migraines.",
-	 "I would take painkillers almost daily.",
-	 "The Mayo Clinic says that migraines often first occur during adolescence (10-19) and are the worst during one's 30s."
+	 "I would take painkillers almost daily."
     ],
     reply: [
       {
@@ -540,7 +576,7 @@ var convo = {
     reply: [
       {
         question: "Show me what your aura is like.",
-        answer: "auraFunction"
+        answer: "exp35"
       },
       {
         question: "Explain to me what your aura is like.",
@@ -548,7 +584,18 @@ var convo = {
       }
     ]
   },
-    "exp4": {
+    "exp35": {
+    says: [
+	  "<iframe width=420 height=315 src=https://www.youtube.com/embed/qVFIcF9lyk8></iframe>",
+	  "But on the left side, not the right side."
+    ],
+    reply: [
+      {
+        question: "What happens after the aura?",
+        answer: "exp5"
+      }
+    ]
+  },"exp4": {
     says: [
       "For me, the aura is a blind or blurry spot and then grows.",
 	  "It starts at the centre of my vision, and then I can no longer read.",
@@ -671,7 +718,22 @@ var chatWindow = new Bubbles(
 )
 chatWindow.talk(convo)
 
+function toggleOverlay(){
+	var overlay = document.getElementById('overlay');
+	var specialBox = document.getElementById('specialBox');
+	overlay.style.opacity = .8;
+	if(overlay.style.display == "block"){
+		overlay.style.display = "none";
+		specialBox.style.display = "none";
+	} else {
+		overlay.style.display = "block";
+		specialBox.style.display = "block";
+	}
+	chatWindow.talk(convo, "exp5"); 
+}
 
 </script>
+
+
 </body>
 </html>
