citations for text (not up yet)

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -19,7 +19,7 @@ This project is feminist because it is
 (alphabetical orders)
 This project has been developed with the guidance and support of <a href="https://finokoye.com/" target="_blank"">Florence</a>, <a href="https://joanachicau.com/" target="_blank"">Jo</a>, <a href="https://olu.online/" target="_blank"">Olu</a>, and <a href="https://yasmine-boudiaf.com/" target="_blank"">Yasmine</a>. Thank your for sharing your practice and expertise with me, and thank you for your encouragement and patience. Another thank you to Kes, Mathilda, Peaks and Yifan for your kindness and community throughout the term. "We aren't meant to know everything, that is why we have each other."   
 <br><br>
-This project is about conversations. "We need to have a conversation about ableism. Every single community, everywhere" -<a href="https://crutchesandspice.com/" target="_blank"">Imani Barbarin</a>. Black disabled lives matter. 
+This project is about conversations. "We need to have a conversation about ableism. Every single community, everywhere, because everything this year has been informed by it." -<a href="https://crutchesandspice.com/" target="_blank"">Imani Barbarin</a>. Black disabled lives matter. 
 
 <hr class="f4 ba b--black-10 mt5 mb4 ml0">
 
@@ -29,3 +29,33 @@ The chatbot was developed with the npm package "chat-bubble", a simple chatbot U
 <br><br>
 (adapted from <a href="https://abolitionistlibraryassociation.org/about/" target="_blank"">the Abolitionist Library Association</a>) About this project: This project is hosted on GitHub, using GitHub Pages. The parent company of GitHub is Microsoft, which holds a contract with Immigration and Customs Enforcement (ICE) in the United States of America. The ICE enacts harmful and deeply racist acts of violence, including deportation and incarceration. My values are antithetical to this partnership and other perpetuations of violence and erasure committed against BIPOC communities. "No human is illegal. Abolish the border." -<a href="https://twitter.com/HarshaWalia" target="_blank"">Harsha Walia</a>
 <br><br>
+
+<hr class="f4 ba b--black-10 mt5 mb4 ml0">
+
+<h3 class="f2 f1-ns measure-narrow lh-solid">
+ reference list
+</h3>
+
+<p>Barbarin, I. [@Imani_Barbarin](2021)&nbsp; I’ll leave y’all with this and then I’m logging off: We need to have a conversation about ableism. Every single community, everywhere, because everything this year has been informed by it. Everything.[Twitter] 28 August. Available at: https://twitter.com/imani_barbarin/status/1299549882915659776 (Accessed: December 13, 2021).</p>
+
+<p>Cincinnato, C. (2015)&nbsp;<em>Migraine with aura symptoms</em>,&nbsp;<em>Migrainepal.com</em>. Available at: https://migrainepal.com/migraine-with-aura/ (Accessed: December 13, 2021).</p>
+
+<p>dmitrizzle (2021)&nbsp;<em>npm: chat-bubble</em>. Available at: https://www.npmjs.com/package/chat-bubble (Accessed: December 13, 2021).</p>
+
+<p>van Dongen, R. M. and Haan, J. (2019) &ldquo;Symptoms related to the visual system in migraine,&rdquo;&nbsp;<em>F1000Research</em>, 8, p. 1219. doi: 10.12688/f1000research.18768.1.</p>
+
+<p>Formspree (2021)&nbsp;<em>blogophonic-hugo: Blogophonic &ndash; a Hugo blog theme by Formspree</em>. Available at: https://github.com/formspree/blogophonic-hugo (Accessed: December 13, 2021).</p>
+
+<p>Hamraie, A. and Fritsch, K. (2019) &ldquo;Crip Technoscience Manifesto,&rdquo;&nbsp;<em>Catalyst Feminism Theory Technoscience</em>, 5(1), pp. 1&ndash;33. doi: 10.28968/cftt.v5i1.29607.</p>
+
+<p>Mayo Clinic Staff (2021)&nbsp;<em>Migraine</em>,&nbsp;<em>Mayoclinic.org</em>. Available at: https://www.mayoclinic.org/diseases-conditions/migraine-headache/symptoms-causes/syc-20360201 (Accessed: December 13, 2021).</p>
+
+<p><em>Migraine Visual Aura</em>&nbsp;(2011). Youtube. Available at: https://www.youtube.com/watch?v=qVFIcF9lyk8 (Accessed: December 13, 2021).</p>
+
+<p>Reflex Spinal Health (2017)&nbsp;<em>Migraine awareness week 2017</em>,&nbsp;<em>Reflexspinalhealth.com</em>. Available at: https://www.reflexspinalhealth.com/2017/09/03/migraine-awareness-week-2017/ (Accessed: December 13, 2021).</p>
+
+<p>Smale, S. (2016)&nbsp;<em>Pathophysiology &amp; Symptomology of Migraine Headaches &mdash; Rayner &amp; Smale</em>,&nbsp;<em>Raynersmale.com</em>. Rayner &amp; Smale. Available at: https://www.raynersmale.com/blog/2016/11/4/pathophysiology-symptomology-of-migraine-headaches (Accessed: December 13, 2021).</p>
+
+<p>The A11Y Project (2021)&nbsp;<em>Checklist</em>,&nbsp;<em>A11yproject.com</em>. Available at: https://www.a11yproject.com/checklist/ (Accessed: December 13, 2021).</p>
+
+<p>Walia, H. [@HarshaWalia](2021)&nbsp;No human is illegal. Abolish the border.[Twitter] 24 March. Available at: https://twitter.com/harshawalia/status/1374746107633278983 (Accessed: December 13, 2021).</p>
