--- a/content/resources/index.html
+++ b/content/resources/index.html
@@ -8,7 +8,7 @@ show_title_as_headline: true
 
 
 <p class="f4 measure lh-copy">
-  There are many great migraine resources that organisations and communities have created for migraines, but these are what has worked for me. 
+  There are many great migraine resources that organisations and communities have created for migraines, but these are what have worked for me. 
 </p>
 
 
@@ -28,7 +28,7 @@ show_title_as_headline: true
       <img src="https://github.com/lexahl/migraine/blob/main/content/resources/assets/migraine-track.png?raw=true" align="left" class="mw-100 w4 mr3 db br3 br--left"
         alt="sreenshot of excel spreadsheet">
       Tracking migraines can help figure out triggers (what doesn't work) and find out what makes things better. Tracking triggers can be helpful to learning about your migraines and advocating with a doctor, but can be emotionally and physically draining, especially after an attack. Be kind to yourself.
-      <a href="https://migrainebuddy.com/" target="_blank">Try the Migraine Buddy app</a> or create your own way to track. The <a href="https://docs.google.com/spreadsheets/d/1iCSTyieFr3r1jyfMglvGydMcHE2VBEmP1fYYo9pCagc/edit#gid=0" target="_blank">Migraine Log template</a>, created by the r/migraine community, is a good alternative. 
+      <a href="https://migrainebuddy.com/" target="_blank">Try the Migraine Buddy app</a> (or <a href="https://www.m-sense.de/" target="_blank">M-sense app</a> in Germany) or create your own way to track. The <a href="https://docs.google.com/spreadsheets/d/1iCSTyieFr3r1jyfMglvGydMcHE2VBEmP1fYYo9pCagc/edit#gid=0" target="_blank">Migraine Log template</a>, created by the r/migraine community, is a good alternative. 
     </p>
     
     <h4 class="f4 mt4 lh-title">advocate for treatment</h4>
@@ -43,8 +43,12 @@ show_title_as_headline: true
     <p class="measure lh-copy cf">
       <img src="https://github.com/lexahl/migraine/blob/main/content/resources/assets/migraine-learn.png?raw=true" align="left" class="mw-100 w4 mr3 db br3 br--left"
         alt="screenshot of webpage explain what migraines are">
-		Knowing my body, what works and what does not work, has helped me get better treatment for myself, learn how to manage my symptoms better, and plan ahead. For example, I was terrified before I knew I had visual auras, and nobody believed me. Now that I know I get auras, I am calmer even though I don't understand why they happen.      
-		<a href="https://migrainetrust.org/understand-migraine/">Start reading here</a>, <a href="https://www.migraine.org.au/about_migraine">here</a>, and <a href="https://migraineresearchfoundation.org/resources/resources-and-links/">here</a>.
+		Knowing my body, what works and what does not work, has helped me get better treatment for myself, learn how to manage my symptoms better, and plan ahead. For example, I was terrified before I knew I had visual auras, and nobody understood what I was experiencing. Now that I know I get auras, I am calmer even though I don't understand why they happen. After talking with family, and other people who get migraines, I learned even more. Here are some great resources to start reading:      
+		<ul>
+		<li> Migraine Trust - <a href="https://migrainetrust.org/understand-migraine/ "target="_blank">Symtoms and Stages, Different Types of Migraine, and Impact (English)</a></li>
+		<li> Asociación Mexicana de Cefaleas y Migraña - <a href="https://amcemig.com/pacientes/" target="_blank">Preguntas Frecuentes Sobre Migraña (Español/Spanish)</a></li>
+		<li> M-sense Migräne - <a href="https://www.m-sense.de/blog/migraene-expertenwissen-zu-ursachen-ausloesern-und-behandlungsmethoden/ target="_blank">Migräne: Ursachen, Symptome und Therapie (Deutsch/German)</a></li>
+		<li> Migraine Australia - <a href="https://www.migraine.org.au/about_migraine" target="_blank">About Migraine (English)</a></li>
     </p>
     
 </div>
