update dialogue to be slower

--- a/content/about/index.html
+++ b/content/about/index.html
@@ -17,7 +17,7 @@ This project is feminist because it is
  acknowledgements
 </h3>
 (alphabetical orders)
-This project has been developed with the guidance and support of <a href="https://finokoye.com/" target="_blank"">Florence</a>, <a href="https://joanachicau.com/" target="_blank"">Jo</a>, <a href="https://olu.online/" target="_blank"">Olu</a>, and <a href="https://yasmine-boudiaf.com/" target="_blank"">Yasmine</a>. Thank your for sharing your practice and expertise with me, and thank you for your encouragement and patience. Another thank you to Kes, Mathilda, Peaks and Yifan for your kindness and community throughout the term. "We aren't meant to know everything, that is why we have each other."   
+This project has been developed with the guidance and support of <a href="https://finokoye.com/" target="_blank"">Florence</a>, <a href="https://joanachicau.com/" target="_blank"">Jo</a>, <a href="https://olu.online/" target="_blank"">Olu</a>, and <a href="https://yasmine-boudiaf.com/" target="_blank"">Yasmine</a>. Thank your for sharing your practice and expertise with me, and thank you for your encouragement and patience. Another thank you to Kes, Mathilda and Yifan for your kindness and community throughout the term. Thank you Peaks for organizing the lectures and providing food for thought (including endless snacks) throughout the term. Thank you to everyone who has ever asked me a question about my migraines, you inspired this project. "We aren't meant to know everything, that is why we have each other."   
 <br><br>
 This project is about conversations. "We need to have a conversation about ableism. Every single community, everywhere, because everything this year has been informed by it." -<a href="https://crutchesandspice.com/" target="_blank"">Imani Barbarin</a>. Black disabled lives matter. 
 
@@ -48,9 +48,7 @@ The chatbot was developed with the npm package "chat-bubble", a simple chatbot U
 
 <p>Hamraie, A. and Fritsch, K. (2019) &ldquo;Crip Technoscience Manifesto,&rdquo;&nbsp;<em>Catalyst Feminism Theory Technoscience</em>, 5(1), pp. 1&ndash;33. doi: 10.28968/cftt.v5i1.29607.</p>
 
-<p>Mayo Clinic Staff (2021)&nbsp;<em>Migraine</em>,&nbsp;<em>Mayoclinic.org</em>. Available at: https://www.mayoclinic.org/diseases-conditions/migraine-headache/symptoms-causes/syc-20360201 (Accessed: December 13, 2021).</p>
-
-<p><em>Migraine Visual Aura</em>&nbsp;(2011). Youtube. Available at: https://www.youtube.com/watch?v=qVFIcF9lyk8 (Accessed: December 13, 2021).</p>
+<p>The Mayo Clinic (2011)&nbsp;<em>Migraine Visual Aura</em>. Youtube. Available at: https://www.youtube.com/watch?v=qVFIcF9lyk8 (Accessed: December 13, 2021).</p>
 
 <p>Reflex Spinal Health (2017)&nbsp;<em>Migraine awareness week 2017</em>,&nbsp;<em>Reflexspinalhealth.com</em>. Available at: https://www.reflexspinalhealth.com/2017/09/03/migraine-awareness-week-2017/ (Accessed: December 13, 2021).</p>
 
