--- a/content/about/index.html
+++ b/content/about/index.html
@@ -7,7 +7,13 @@ show_title_as_headline: true
 
 
 <p class="f4 measure lh-copy">
-This project is feminist because it is 
+
+Feminism, to me, is labour. It is making labour visible, and it is a dialogue. It is having conversations that are uncomfortable, and it is making space for change. This project is about the conversations I have about my migraines and how that in itself is labour. I do not owe it to anyone to explain my migraines, but it is expected of me. From explaining to friends why I can’t see them to requiring documents from 3 countries to prove I have an invisible condition, it is expected of me in society, and it is labour. 
+
+This project is a way to shift labour and shift power. As the chatbot is scripted and the user cannot ask questions that I do not want to answer, the chatbot cannot receive abuse, and I control what is shared in the conversation. However, I do not always have this power. Sometimes my access to support and healthcare depends on how I answer specific questions, and in these cases, I have no power. 
+
+In this project, I am the community that is being represented. I am the expert, and I am the designer. My values are being shared, and my experiences are being prioritized. I am benefiting from the design, and this project was fully co-created to address the problem I am hoping to solve. I do not want to have these conversations anymore, and I do not have to. Feminism, to me, prioritizes is inclusion and diversity. It means making a website that is accessible, and it means making a website that can represent me. As Fritsch and Hamraie state in the Crip Technoscience Manifesto (2019), “disabled people are experts and designers of everyday life.” This is my everyday life, and these are my migraines. 
+
 
 
 
@@ -17,7 +23,7 @@ This project is feminist because it is
  acknowledgements
 </h3>
 (alphabetical orders)
-This project has been developed with the guidance and support of <a href="https://finokoye.com/" target="_blank"">Florence</a>, <a href="https://joanachicau.com/" target="_blank"">Jo</a>, <a href="https://olu.online/" target="_blank"">Olu</a>, and <a href="https://yasmine-boudiaf.com/" target="_blank"">Yasmine</a>. Thank your for sharing your practice and expertise with me, and thank you for your encouragement and patience. Another thank you to Kes, Mathilda and Yifan for your kindness and community throughout the term. Thank you Peaks, شكرًا, for organizing the lectures and providing food for thought (including endless snacks) throughout the term. Thank you to everyone who has ever asked me a question about my migraines, you inspired this project. "We aren't meant to know everything, that is why we have each other."   
+This project has been developed with the guidance and support of Florence, Jo, Olu, and Yasmine. Thank your for sharing your practice and expertise with me, and thank you for your encouragement and patience. Another thank you to Kes, Mathilda and Yifan for your kindness and community throughout the term. Thank you Peaks, شكرًا, for organizing the lectures and providing food for thought (including endless snacks) throughout the term. Thank you to everyone who has ever asked me a question about my migraines, you inspired this project. "We aren't meant to know everything, that is why we have each other."   
 <br><br>
 This project is about conversations. "We need to have a conversation about ableism. Every single community, everywhere, because everything this year has been informed by it." -<a href="https://crutchesandspice.com/" target="_blank"">Imani Barbarin</a>. Black disabled lives matter. 
 
